# misis2025s-22-3-orkin-r-r

./: .build.bat  .gitignore  CMakeLists.txt  README.md  build.sh
lib/semcv/: CMakeLists.txt  semcv.cpp  semcv.hpp
prj.cw/: .gitignore  CMakeLists.txt  PROJECT_STATUS.md  QUICKSTART.md  README.md  build.bat  build.sh  test_structure.sh
prj.cw — копия/: README.md  run_debug.bat
prj.cw — копия/include/: shadowledentifier.h
prj.cw — копия/src/: main.cpp
prj.cw/docs/: shadow_detection_algorithms.md
prj.cw/examples/: README.md
prj.cw/include/: mainwindow.h  shadowledentifier.h
prj.cw/src/: main.cpp  mainwindow.cpp  shadowledentifier.cpp
prj.lab/: CMakeLists.txt
prj.lab/lab01/: CMakeLists.txt  lab01.cpp  task01-01.cpp  task01-02.cpp
prj.lab/lab02/: CMakeLists.txt  lab02.cpp  task02.cpp
prj.lab/lab03/: CMakeLists.txt  lab03.cpp  task03.cpp
prj.lab/lab04/: CMakeLists.txt  lab04.cpp  task04-01.cpp  task04-02.cpp  task04-03.cpp
prj.lab/lab05/: CMakeLists.txt  lab05.cpp  task05.cpp
prj.lab/lab06/: CMakeLists.txt  lab06.cpp  task06.cpp
prj.lab/lab07/: CMakeLists.txt  lab07.cpp  task07-01.cpp  task07-02.cpp
prj.lab/lab08/: CMakeLists.txt  lab08.cpp  task08.cpp
prj.lab/lab1_raster_formats_gamma/: CMakeLists.txt
prj.lab/lab1_raster_formats_gamma/include/: lab1_raster_formats_gamma.h
prj.lab/lab1_raster_formats_gamma/src/: lab1_raster_formats_gamma.cpp  main.cpp
prj.lab/lab1_raster_formats_gamma/test/: test_lab1_raster_formats_gamma.cpp
prj.lab/lab2_image_noise/: CMakeLists.txt
prj.lab/lab2_image_noise/include/: lab2_image_noise.h
prj.lab/lab2_image_noise/src/: lab2_image_noise.cpp  main.cpp
prj.lab/lab2_image_noise/test/: test_lab2_image_noise.cpp
prj.lab/lab3_auto_contrast/: CMakeLists.txt
prj.lab/lab3_auto_contrast/include/: lab3_auto_contrast.h
prj.lab/lab3_auto_contrast/src/: lab3_auto_contrast.cpp  main.cpp
prj.lab/lab3_auto_contrast/test/: test_lab3_auto_contrast.cpp
prj.lab/lab4_binarization_detection/: CMakeLists.txt
prj.lab/lab4_binarization_detection/include/: lab4_binarization_detection.h
prj.lab/lab4_binarization_detection/src/: lab4_binarization_detection.cpp  main.cpp
prj.lab/lab4_binarization_detection/test/: test_lab4_binarization_detection.cpp
prj.lab/lab5_linear_filtering/: CMakeLists.txt
prj.lab/lab5_linear_filtering/include/: lab5_linear_filtering.h
prj.lab/lab5_linear_filtering/src/: lab5_linear_filtering.cpp  main.cpp
prj.lab/lab5_linear_filtering/test/: test_lab5_linear_filtering.cpp
prj.lab/lab6_object_detection_filtering/: CMakeLists.txt
prj.lab/lab6_object_detection_filtering/include/: lab6_object_detection_filtering.h
prj.lab/lab6_object_detection_filtering/src/: lab6_object_detection_filtering.cpp  main.cpp
prj.lab/lab6_object_detection_filtering/test/: test_lab6_object_detection_filtering.cpp
prj.lab/lab7_edge_detection/: CMakeLists.txt
prj.lab/lab7_edge_detection/include/: lab7_edge_detection.h
prj.lab/lab7_edge_detection/src/: lab7_edge_detection.cpp  main.cpp
prj.lab/lab7_edge_detection/test/: test_lab7_edge_detection.cpp
semcv/: CMakeLists.txt
semcv/include/: semcv.h
semcv/src/: auto_contrast.cpp  binarization.cpp  edge_detection.cpp  gamma_correction.cpp  linear_filtering.cpp  noise_generation.cpp  object_detection.cpp  test_functions.cpp  test_main.cpp  utility_functions.cpp
